//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Project "Veryable" {
  database_type: 'MySQL'
  Note: 'Database for housing metrics for QA to analyze and use for continuous improvement'
}

Table Commit {
  commit_event_id String [pk]
  sha String [not null]
  qa_ready Boolean [default: false]
  interacted Boolean [default: false]
  dev_blocked Boolean [default: false]
  qa_stamped Boolean [default: false]
  ci_status commit_ci_status
  committed_at Int [not null]
  pushed_at Int
  pull_request_id String
  pull_request PullRequest
  pull_request_head_ref PullRequestCommit
  commit_history PullRequestHistory [not null]

  indexes {
    (sha, pull_request_id) [unique]
  }
}

Table Day {
  date Int [pk]
  pull_count Int [not null, default: 0]
  pulls_added Int [not null, default: 0]
  pulls_interacted Int [not null, default: 0]
  unique_pulls_added Int [not null, default: 0]
}

Table PullRequest {
  pull_request_id String [pk]
  repo String [not null, default: '']
  pull_number Int [not null]
  state pull_request_state [not null]
  title String [not null]
  head_ref String [not null]
  head_commit_id String [not null]
  qa_req Int [not null, default: 1]
  created_at Int
  updated_at Int
  closed_at Int
  merged_at Int
  closes Int
  author String [not null]
  agg_interacted_count Int [not null, default: 0]
  agg_qa_ready_count Int [not null, default: 0]
  agg_dev_block_count Int [not null, default: 0]
  agg_qa_stamped_count Int [not null, default: 0]
  qa_ready Boolean [default: false]
  interacted Boolean [default: false]
  dev_blocked Boolean [default: false]
  qa_stamped Boolean [default: false]
  commits Commit [not null]
  head_commit PullRequestCommit
  pull_request_history PullRequestHistory [not null]

  indexes {
    (repo, pull_number) [unique]
  }
}

Table PullRequestCommit {
  pull_request_id String [pk]
  head_commit_id String [unique]
  head_commit Commit
  pull_request PullRequest [not null]
}

Table PullRequestHistory {
  start_date Int [not null]
  date Int [not null]
  pull_request_id String [not null]
  commit_sha String [not null]
  event pull_request_history_event [not null]
  actor String
  pull_request_event_index Int [not null]
  commit_event_id String [not null]
  commit Commit [not null]
  pull_request PullRequest [not null]

  indexes {
    (date, pull_request_id, event) [pk]
  }
}

Enum pull_request_state {
  OPEN
  CLOSED
  MERGED
}

Enum commit_ci_status {
  PENDING
  ERROR
  FAILURE
  SUCCESS
  EXPECTED
}

Enum pull_request_history_event {
  qa_ready
  non_qa_ready
  first_interaction
  interacted
  dev_blocked
  un_dev_blocked
  qa_stamped
  closed
  merged
}

Ref: Commit.pull_request_id > PullRequest.pull_request_id [delete: Cascade]

Ref: PullRequestCommit.head_commit_id - Commit.commit_event_id [delete: Cascade]

Ref: PullRequestCommit.pull_request_id - PullRequest.pull_request_id [delete: Cascade]

Ref: PullRequestHistory.commit_event_id > Commit.commit_event_id [delete: Cascade]

Ref: PullRequestHistory.pull_request_id > PullRequest.pull_request_id [delete: Cascade]